完成提问操作

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,8 @@
-<p>
-  home works!
-</p>
+<div class="home-top-banner">
+  <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcQ9U90ww94S-c1W-lJrU3McPqMUsVI4SFrDTvXsnRP0hZIgkeFZRA" />
+</div>
+<ul class="q-container">
+  <li *ngFor="let question of questions"
+      class="question-card">
+  </li>
+</ul>
