--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,5 +4,9 @@
 <ul class="q-container">
   <li *ngFor="let question of questions"
       class="question-card">
+      <div class="question-content">
+        {{ question.content }}
+      </div>
   </li>
 </ul>
+{{title}}
