--- a/src/app/navigator/navigator.component.scss
+++ b/src/app/navigator/navigator.component.scss
@@ -8,7 +8,7 @@ $activeLinkColor: #FFEB3B;
   align-items: center;
   height: 50px;
   width: 100%;
-  font-size: 20px;
+  font-size: 18px;
   border-top: 1px solid rgba(0,0,0,.03);
   color: #fff;
   box-shadow: 0 2px 2px rgba(0,0,0,.24), 0 0 2px rgba(0,0,0,.12);
@@ -19,4 +19,5 @@ $activeLinkColor: #FFEB3B;
       color: $activeLinkColor;
     }
   }
+  z-index: 10;
 }
