--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/core/theming/prebuilt/deeppurple-amber.css';
+html {
+  height: 100%;
+}
 
 
 body {
   font-size: 14px;
   margin: 0;
+  height: 100%;
+  background: #fafafa;
 }
 
 a {
