--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -15,6 +15,9 @@
     padding: 15px 15px;
     margin-bottom: 10px;
     background: #fff;
+    .name {
+      color: #bdbdbd;
+    }
     .question-content {
       font-size: 16px;
     }
