--- a/src/app/question-detail/question-detail.component.html
+++ b/src/app/question-detail/question-detail.component.html
@@ -25,5 +25,5 @@
   </li>
 </ul>
 <button class="voice-btn" md-fab (touchstart)="beginTranscribe()" (touchend)="endTranscribe()"><md-icon>keyboard_voice</md-icon></button>
-<!--<button md-raised-button (click)="getAccessToken()">getAccessToken</button>
-<button md-raised-button (click)="getJsApiTicket()">getJsApiTicket</button>-->
+<button md-raised-button (click)="getAccessToken()">getAccessToken</button>
+<button md-raised-button (click)="getJsApiTicket()">getJsApiTicket</button>
