--- a/src/app/me/me.component.scss
+++ b/src/app/me/me.component.scss
@@ -5,11 +5,60 @@ $themeColor: #000;
   height: 180px;
   background: $themeColor;
   color: #fff;
+  margin-bottom: 50px;
+  position: relative;
+  .blur {
+    width: 100%;
+    height: 100%;
+    -webkit-filter: blur(10px); /* Chrome, Opera */
+    -moz-filter: blur(10px);
+    -ms-filter: blur(10px);
+        filter: blur(10px);
+  }
+  .avatar {
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    border-radius: 50px;
+    left: 50%;
+    top: 50%;
+    margin-left: -50px;
+    margin-top: -50px;
+  }
   .login-out-btn {
     background: #fff;
     position: absolute;
     top: 5px;
     right: 5px;
+  }
+  .upload-controls {
+    width: 100%;
+    display: flex;
+    position: absolute;
+    bottom: 15px;
+    justify-content: space-around;
+    align-content: center;
+    color: #fff;
+    .upload-btn {
+      &.hidden {
+        opacity: 0;
+        transform: translateX(50px);
+      }
+      background: #4CAF50;
+      opacity: 1;
+      transform: translateX(0px);
+      transition: all 0.5s ease-in;
+    }
+    .cancle-btn {
+      &.hidden {
+        opacity: 0;
+        transform: translateX(-50px);
+      }
+      background: #F44336;
+      opacity: 1;
+      transform: translateX(0px);
+      transition: all 0.5s ease-in;
+    }
   }
 }
 
@@ -19,13 +68,19 @@ $themeColor: #000;
   display: flex;
   justify-content: center;
   align-items: center;
+
+  .edit-btn {
+    background: #000;
+    color: #FFEB3B
+  }
 }
 
 .user-setting {
-  margin: 0px;
+  margin: 0px 0px 50px 0px;
   padding: 20px 0px;
   font-size: 20px;
   li {
+    background: #fff;
     list-style: none;
     a {
       display: flex;
