--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -7,8 +7,8 @@
     width: 100%;
   }
   .login-btn {
-    background: rgb(0, 188, 212);
-    color: #fff;
+    background: #000;
+    color:#FFEB3B;
     margin-top: 15px;
   }
 }
@@ -17,14 +17,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #fff;
+  color: #FFEB3B;
   position: fixed;
   bottom: 100px;
   left: 50%;
   width: 80px;
   height: 30px;
   margin-left: -40px;
-  background: rgb(0, 188, 212);
+  background: #000;
   border-radius: 20px;
   box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
 }
