--- a/src/app/me/me.component.scss
+++ b/src/app/me/me.component.scss
@@ -7,6 +7,11 @@ $themeColor: #000;
   color: #fff;
   margin-bottom: 50px;
   position: relative;
+
+  #avatar {
+    display: none;
+  }
+  
   .blur {
     width: 100%;
     height: 100%;
