--- a/src/app/my-questions/my-questions.component.html
+++ b/src/app/my-questions/my-questions.component.html
@@ -1,4 +1,5 @@
-<div>
+<app-loading *ngIf="loading"></app-loading>
+<div *ngIf="!loading">
   <a *ngFor="let question of questions" class="question" [routerLink]="['/question', question.id]">
     <div class="question-author">
       <img class="avatar" [src]="question.owner.avatar?.attributes.url || './assets/avatar.jpg'" /> <span class="name">{{ question.owner?.username }}问到</span>
