--- a/src/app/question-detail/question-detail.component.html
+++ b/src/app/question-detail/question-detail.component.html
@@ -10,33 +10,21 @@
   </div>
 </div>
 <div class="answer-title">回答</div>
-<ul class="answer-list">
-  <li class="answer-card">
-    <div class="name">亚索｜前端工程师</div>
+<app-loading *ngIf="answerLoading"></app-loading>
+<ul *ngIf="!answerLoading" class="answer-list">
+  <li *ngFor="let answer of answers" class="answer-card">
+    <div class="name">{{ answer.owner.username }}｜{{ answer.owner.introduction }}</div>
     <div class="answer-content">
-      <img  class="avatar" src="./assets/avatar.jpg" />
-      <div class="comment" (click)="playVoice(1)">
+      <img  class="avatar" [src]="answer.owner.avatar?.attributes.url || './assets/avatar.jpg'" />
+      <audio [id]="answer.id" [src]="answer.url"></audio>
+      <div class="comment" (click)="playVoice(answer.id)">
         <i class="material-icons voice">volume_up</i>  
-        <span class="duration">00:46</span>
+        <span class="duration">{{answer.duration}}s</span>
       </div>
-      <audio id="1" src="http://7xo69p.com1.z0.glb.clouddn.com/f0ZhdfBuStBT1zwU3OUQUMDT9tQ=/FpBnq1IjDY8Y6f2_BcJ9WD-qEe_h" preload="metadata"></audio>
+
     </div>
     <div class="card-bottom">
-      <span class="time">9天前</span>
-    </div>
-  </li>
-  <li class="answer-card">
-    <div class="name">亚索｜前端工程师</div>
-    <div class="answer-content">
-      <img  class="avatar" src="./assets/avatar.jpg" />
-      <div class="comment" (click)="playVoice(1)">
-        <i class="material-icons voice">volume_up</i>  
-        <span class="duration">00:46</span>
-      </div>
-      <audio id="1" src="http://7xo69p.com1.z0.glb.clouddn.com/f0ZhdfBuStBT1zwU3OUQUMDT9tQ=/FpBnq1IjDY8Y6f2_BcJ9WD-qEe_h" preload="metadata"></audio>
-    </div>
-    <div class="card-bottom">
-      <span class="time">9天前</span>
+      <span class="time">{{answer.dateFromNow}}</span>
     </div>
   </li>
 </ul>
