--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/core/theming/prebuilt/deeppurple-amber.css';
 html {
-  height: 100%;
+  min-height: 100%;
 }
 
 
 body {
   font-size: 14px;
   margin: 0;
-  height: 100%;
+  min-height: 100%;
   background: #fafafa;
 }
 
