--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,3 +12,4 @@
   <button type="submit" md-raised-button color="primary" class="login-btn">登录</button>
 </form>
 <a routerLink="/sign" routerLinkActive="active" class="link-sign">去注册<md-icon>arrow_forward</md-icon></a>
+<app-alert></app-alert>
