--- a/src/app/alert/alert.component.scss
+++ b/src/app/alert/alert.component.scss
@@ -13,6 +13,7 @@
   font-size: 16px;
   border-radius: 4px;
   box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  padding: 10px;
   &.success {
     background: #4CAF50;
   }
@@ -20,6 +21,6 @@
     background: #F44336;
   }
   &.hidden {
-      bottom: 0px;
+      bottom: -20px;
   }
 }
