add edit-dialog component and add personal question

--- a/src/app/alert/alert.component.scss
+++ b/src/app/alert/alert.component.scss
@@ -1,26 +1,32 @@
-.container {
+.overlayer {
   position: fixed;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 200px;
-  height: 50px;
-  left: 50%;
-  margin-left: -100px;
-  bottom: 100px;
-  color: #fff;
   transition:  all 0.5s ease;
-  font-size: 16px;
-  border-radius: 4px;
-  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-  padding: 10px;
-  &.success {
-    background: #4CAF50;
-  }
-  &.fail {
-    background: #F44336;
+  bottom: 120px;
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 200px;
+    max-width: 300px;
+    height: 30px;
+    border-radius: 15px;
+    color: #fff;
+    font-size: 16px;
+    border-radius: 4px;
+    box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+    padding: 10px;
+    &.success {
+      background: #4CAF50;
+    }
+    &.fail {
+      background: #F44336;
+    }
   }
   &.hidden {
-      bottom: -20px;
+    bottom: -20px;
   }
 }
