--- a/src/app/edit-dialog/edit-dialog.component.html
+++ b/src/app/edit-dialog/edit-dialog.component.html
@@ -5,7 +5,7 @@
   </md-input-container>
   {{question.length}} / 100
   <div class="btn-container">
-    <button type="submit" class="confirm-btn" md-button >发布</button>
+    <button type="submit" class="confirm-btn" md-button >确定</button>
   </div> 
 </form>
 
