--- a/src/app/edit-dialog/edit-dialog.component.scss
+++ b/src/app/edit-dialog/edit-dialog.component.scss
@@ -13,7 +13,7 @@
   justify-content: flex-end;
   align-items: center;
   .confirm-btn {
-    background: #009688;
-    color: #fff;
+    background: #000;
+    color: #FFEB3B;
   }
 }
