--- a/src/app/navigator/navigator.component.html
+++ b/src/app/navigator/navigator.component.html
@@ -1,4 +1,5 @@
 <div class="navigator">
   <a routerLink="/home" routerLinkActive="active" class="link">首页</a>
+  <a routerLink="/search" routerLinkActive="active" class="link">搜索</a>
   <a routerLink="/me" routerLinkActive="active" class="link">我的</a>
 </div>
