--- a/src/app/question-detail/question-detail.component.html
+++ b/src/app/question-detail/question-detail.component.html
@@ -1,12 +1,15 @@
 <div class="question">
   <div class="question-author">
-    <img class="avatar" [src]="question.owner.avatar?.attributes.url || './assets/avatar.jpg'" /> <span class="name">{{ question.owner?.username }}问到</span>
+    <img class="avatar" [src]="question.owner.avatar?.attributes.url || './assets/avatar.jpg'" /> 
+    <span *ngIf="!question.to" class="name">{{ question.owner?.username }}问到</span>
+    <span *ngIf="question.to" class="name">{{ question.owner?.username }}向 {{ question.to.attributes.username}} 问到</span>
   </div>
   <div class="question-title">
     <h3>{{ question.content }}</h3>
   </div>
   <div class="question-meta">
-   {{ question.dateFromNow }}
+   <span>{{ question.dateFromNow }}</span>
+   <span>{{ question.views }}人看过</span>
   </div>
 </div>
 <div class="answer-title">回答</div>
@@ -25,6 +28,7 @@
     </div>
     <div class="card-bottom">
       <span class="time">{{answer.dateFromNow}}</span>
+
     </div>
   </li>
 </ul>
