--- a/src/app/alert/alert.component.html
+++ b/src/app/alert/alert.component.html
@@ -1,3 +1,6 @@
-<div class="container" [ngClass]="{hidden: isHidden, success: isSuccess, fail: isFail}">
-  {{ content }}
+<div class="overlayer" [ngClass]="{hidden: isHidden}">
+  <div class="container" [ngClass]="{success: isSuccess, fail: isFail}">
+    {{ content }}
+  </div>
 </div>
+
