--- a/src/app/question-detail/question-detail.component.scss
+++ b/src/app/question-detail/question-detail.component.scss
@@ -39,6 +39,10 @@
     color: #bdbdbd;
     margin-bottom: 5px;
   }
+  .to-name {
+    color: #000;
+    font-weight: 700;
+  }
   .answer-card {
     display: block;
     padding: 10px 20px;
