--- a/src/app/alert/alert.component.scss
+++ b/src/app/alert/alert.component.scss
@@ -19,6 +19,7 @@
     border-radius: 4px;
     box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
     padding: 10px;
+    border-radius: 30px;
     &.success {
       background: #4CAF50;
     }
