--- a/src/app/me/me.component.scss
+++ b/src/app/me/me.component.scss
@@ -65,38 +65,55 @@ $themeColor: #000;
       transition: all 0.5s ease-in;
     }
   }
+  .edit-btn {
+    background: #000;
+    color: #FFEB3B;
+    position: absolute;
+    right: 10%;
+    width: 65px;
+    height: 65px;
+    bottom: -32.5px;
+  }
 }
 
 .user-middle-container {
+  margin-top: 32px;
   width: 100%;
-  height: 100px;
+  height: 80px;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  flex-direction: column-reverse;
+  flex-direction: column;
   font-size: 16px;
   .name {
     text-shadow: 2px 0px 11px rgba(150, 150, 150, 1);
   }
-  .edit-btn {
-    background: #000;
-    color: #FFEB3B
+  .email {
+    display: flex;
+    
   }
 }
 
 .user-setting {
   margin: 0px 0px 50px 0px;
   padding: 20px 0px;
-  font-size: 20px;
+  font-size: 16px;
   li {
+    color: #3f3f3f;
     background: #fff;
     list-style: none;
-    a {
+    border-bottom: 1px solid #f5f5f5;
+    .link {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      border-top: 1px solid rgba(0,0,0,0.3);
       padding: 10px 15px;
+      .icon-container {
+        display: flex;
+        .material-icons {
+          margin-right: 5px;
+        }
+      }
     }
   }
 }
