--- a/src/app/my-questions/my-questions.component.html
+++ b/src/app/my-questions/my-questions.component.html
@@ -2,7 +2,9 @@
 <div *ngIf="!loading">
   <a *ngFor="let question of questions" class="question" [routerLink]="['/question', question.id]">
     <div class="question-author">
-      <img class="avatar" [src]="question.owner.avatar?.attributes.url || './assets/avatar.jpg'" /> <span class="name">{{ question.owner?.username }}问到</span>
+      <img class="avatar" [src]="question.owner.avatar?.attributes.url || './assets/avatar.jpg'" />
+       <span *ngIf="!question.to" class="name">{{ question.owner?.username }}问到</span>
+       <span *ngIf="question.to" class="name">{{ question.owner?.username }}向您问到</span>
     </div>
     <div class="question-title">
       <h3>{{ question.content }}</h3>
