--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -31,6 +31,25 @@
   flex-direction: column;
   align-items: center;
   font-size: 16px;
+  position: relative;
+  .follow-btn {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    top: 15px;
+    right: 5%;
+    outline: 0px;
+    border: 1px solid #ff5722;
+    width: 60px;
+    height: 25px;
+    font-size: 14px;
+    border-radius: 3px;
+    color: #ff5722;
+    background: #fff;
+    i {
+      font-size: 16px;
+    }
+  }
   .result-avatar {
     width: 150px;
     height: 150px;
