--- a/src/app/me/me.component.scss
+++ b/src/app/me/me.component.scss
@@ -95,7 +95,7 @@ $themeColor: #000;
 }
 
 .user-setting {
-  margin: 0px 0px 50px 0px;
+  margin: 0px;
   padding: 20px 0px;
   font-size: 16px;
   li {
